@@ -2,6 +2,11 @@
 SVN
 -------------------------------
 
+XML:   Resolved issue CASTOR-1586 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
+       Fixed error loading mapping whem migrating from 1.0.1 to 1.0.3.
+       Details: http://jira.codehaus.org/browse/CASTOR-1586
+       (Ralf - 20061016)
+
 XML:   Resolved issue CASTOR-1626 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
        Added Code generation sample to HTML documentation.
        Details: http://jira.codehaus.org/browse/CASTOR-1626
